# computermind_aocs_fsw_ROS2_42_study

./: README.md
42sim/communication/: ROS2_client_broadcast.py  SocketReceiveAndSend.py
ROS2/: CMakeLists.txt  package.xml
ROS2/src/: Gyro_sensor_node.cpp  Kalman_filter_node.cpp  PD_controller_node.cpp  Reaction_wheel_node.cpp  Rigid_body_node.cpp  Socket_client.cpp  Star_Tracker_sensor_node.cpp  Target_attitude_node.cpp  Test_command_node.cpp
